changed path of images

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <h1 class="Heading">COURSE.COM</h1>
                 </div>
                 <div class="RtSide">
-                    <img class="SavedTag" src="/images/SAVED.png" alt="">
+                    <img class="SavedTag" src="images/SAVED.png" alt="">
                     <!-- <h2 class="LoginBTN"><a href="">Login</a></h2> -->
-                    <a href=""><img class="UserIcon" src="/images/user.png" alt=""></a>
+                    <a href=""><img class="UserIcon" src="images/user.png" alt=""></a>
                 </div>
             </div>
         </div>
