Changed a little bit of path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="HeaderMain">
                 <div class="leftSide">
-                    <img class="HeadIcon" src="/images/education.png" alt="">
+                    <img class="HeadIcon" src="images/education.png" alt="">
                     <h1 class="Heading">COURSE.COM</h1>
                 </div>
                 <div class="RtSide">
