Thats all for today

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Course.com</title>
 
     <!-- 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 -->
     <link rel="stylesheet" href="styles.css">
@@ -35,6 +35,17 @@
     <section class="SearchSection">
         <div class="container">
                 <h2 class="FindText" >Find Materials</h2>
+                <div class="SearchArea">
+                    <div class="BranchSearchDiv">
+                        <label for="Branch" class="SearchLabel">Branch</label>
+                        <select name="" id="Branch">
+                            <option value=""selected disabled >Select Branch</option>
+                            <option value="">Computer Engineering</option>
+                            <option value="">Electronic</option>\
+                            <option value="">Tool and Die</option>
+                        </select>
+                    </div>
+                </div>
         </div>
     </section>
 </body>
