--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course.com</title>
+    <link rel="shortcut icon" class="Facicon" href="images/education.png" type="image/x-icon">
 
     <!-- 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 -->
     <link rel="stylesheet" href="styles.css">
 
     <!-- boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -34,19 +44,73 @@
     </header>
     <section class="SearchSection">
         <div class="container">
-                <h2 class="FindText" >Find Materials</h2>
-                <div class="SearchArea">
+            <h2 class="FindText">Find Materials</h2>
+            <div class="SearchArea row">
+
+                <div class="RowSearch">
                     <div class="BranchSearchDiv">
                         <label for="Branch" class="SearchLabel">Branch</label>
-                        <select name="" id="Branch">
-                            <option value=""selected disabled >Select Branch</option>
+                        <select class="custom-select" name="" id="Branch">
+                            <option value="" selected disabled>Select Branch</option>
                             <option value="">Computer Engineering</option>
-                            <option value="">Electronic</option>\
+                            <option value="">Electronic</option>
                             <option value="">Tool and Die</option>
                         </select>
                     </div>
+
+                    <div class="BranchSearchDiv">
+                        <label for="Branch" class="SearchLabel">Revision</label>
+                        <select class="custom-select" name="" id="Branch">
+                            <option value="" selected disabled>Select Revision</option>
+                            <option value="">2015</option>
+                            <option value="">2021</option>
+                        </select>
+                    </div>
                 </div>
+
+                <div class="RowSearch">
+                    <div class="BranchSearchDiv">
+                        <label for="Branch" class="SearchLabel">Semester</label>
+                        <select class="custom-select" name="" id="Branch">
+                            <option value="" selected disabled>Select Semester</option>
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                            <option value="">4</option>
+                            <option value="">5</option>
+                            <option value="">6</option>
+                        </select>
+                    </div>
+
+                    <div class="BranchSearchDiv">
+                        <label for="Branch" class="SearchLabel">Branch</label>
+                        <select class="custom-select" name="" id="Branch">
+                            <option value="" selected disabled>Select Subject</option>
+                            <option value="">DCP</option>
+                            <option value="">OOP</option>
+                            <option value="">CA</option>
+                            <option value="">DBMS</option>
+                            <option value="">EVS</option>
+                        </select>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </section>
+    <!-- Search Section Ends here -->
+
+    <!-- Resoures section starts -->
+    <section>
+        <div class="Resources">
+            
+        </div>
+        <div class="VideoResources">
+
+        </div>
+    </section>
+
+
 </body>
+
 </html>
