--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- 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 -->
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -103,9 +104,76 @@
     <!-- Resoures section starts -->
     <section>
         <div class="Resources">
-            
+            <h2 class="ResourcesHeading">Resources</h2>
         </div>
         <div class="VideoResources">
+            <h2 class="VideoHeading">Video</h2>
+            <div class="container">
+                <div class="VideoRow">
+                    <div class="OneVideo">
+                        <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="OneVideo">
+                        <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="OneVideo">
+                        <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="OneVideo">
+                        <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="OneVideo">
+                        <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+
+                    <!-- MoreVideos Load -->
+                    <div class="OneVideo addVideo" onclick="LoadMoreVideos()">
+                        <img src="images/loading.png" alt="" class="Load">
+                        <p class="LoadText">Click Here to Load More ...</p>
+                    </div>
+                    <!-- Load More Videos -->
+
+                    <!-- add More Video -->
+                    <div class="OneVideo addVideo">
+                        <img src="images/plus.png" alt="" class="Add">
+                    </div>
+                    <!-- add More Video Ends HEre -->
+                </div>
+
+                <!-- Video in Grid -->
+                <div class="videoGrid">
+                    <div class="row">
+                        <div class="OneVideoGrid">
+                            <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+                        <div class="OneVideoGrid">
+                            <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+                        <div class="OneVideoGrid">
+                            <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+                        <div class="OneVideoGrid">
+                            <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+                        <div class="OneVideoGrid">
+                            <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
+                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+                        <div onclick="ShowLessVeideo()" class="showLessDiv">
+                            <p class="ShowLessText">Show less...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </section>
