Added Notes area and QP area

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <!-- add More Video Ends HEre -->
                 </div>
-                
+
                 <div class="VideoRow">
                     <div class="OneVideo">
                         <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
@@ -161,7 +161,7 @@
                 <!-- MoreVideos Load -->
 
                 <!-- Video in Grid -->
-                <div class="videoGrid">
+                <div id="VideoGRid" class="videoGrid">
                     <div class="GridVideo">
                         <div class="OneVideoGrid col-12 col-md-6 col-lg-3">
                             <iframe class="VideoClass" src="https://www.youtube.com/embed/4pTiujyY4IM" frameborder="0"
@@ -192,6 +192,139 @@
             </div>
 
         </div>
+
+        <!-- Notes Resources -->
+        <div class="NotesResources">
+            <div class="container">
+                <div class="NotesHeadDiv">
+                    <h2 class="NotesHead">Notes</h2>
+                    <div class=" addVideo">
+                        <p class="addText">Add Notes</p>
+                        <img src="images/plus.png" alt="" class="Add">
+                    </div>
+                </div>
+                <div class="NotesRow">
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                </div>
+                <div class=" addNotes MoreNotes" onclick="LoadMoreNotes()">
+                    <p class="LoadText">Load More ...</p>
+                    <img src="images/down-arrowhead-in-a-circle.png" alt="" class="Load">
+                </div>
+                <div class="NotesGrid">
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="NotesOne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                </div>
+                <div onclick="ShowLessNotes()" class="showLessDivNotes">
+                    <img src="images/down-arrowhead-in-a-circle.png" alt="" class="Load lessLoad">
+                    <p class="ShowLessText">Show less...</p>
+                </div>
+            </div>
+        </div>
+        <!-- Notes Ends Here -->
+
+
+         <!-- QP Resources -->
+         <div class="Q_Presources">
+            <div class="container">
+                <div class="Q_PHeadDiv">
+                    <h2 class="Q_PHead">Q&P</h2>
+                    <div class=" addQ_P">
+                        <p class="addText">Add Q&P</p>
+                        <img src="images/plus.png" alt="" class="Add">
+                    </div>
+                </div>
+                <div class="Q_PRow">
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                </div>
+                <div class=" addNotes MoreQ_P" onclick="LoadMoreQ_P()">
+                    <p class="LoadText">Load More ...</p>
+                    <img src="images/down-arrowhead-in-a-circle.png" alt="" class="Load">
+                </div>
+                <div class="Q_PGrid">
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                    <div class="Q_POne">
+                        <img src="images/pdf-file.png" alt="" class="PdfIcon">
+                        <p class="NotesText">8085 Microprocessor Architecture</p>
+                        <a href="" class="DownloadBTN btn btn-primary">Download PDF</a>
+                    </div>
+                </div>
+                <div onclick="ShowLessQ_P()" class="showLessDivQ_P">
+                    <img src="images/down-arrowhead-in-a-circle.png" alt="" class="Load lessLoad">
+                    <p class="ShowLessText">Show less...</p>
+                </div>
+            </div>
+        </div>
+        <!-- QP Ends Here -->
     </section>
 
 
