--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
             </div>
         </div>
     </header>
+    <!-- Popup starts here -->
+    <section>
+        <div class="form-popup" id="myForm">
+            <form action="#" class="form-container">
+              <h2>Login Form</h2>
+              <label for="email"><b>Email</b></label>
+              <input type="text" placeholder="Enter Email" name="email" required>
+          
+              <label for="psw"><b>Password</b></label>
+              <input type="password" placeholder="Enter Password" name="psw" required>
+          
+              <button type="submit" class="btn">Login</button>
+              <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+            </form>
+          </div>
+    </section>
+    <!-- popup ends here -->
     <section class="SearchSection">
         <div class="container">
             <h2 class="FindText">Find Materials</h2>
