this commit will allow users to send feedback to admins with and without showing their email

--- a/index.html
+++ b/index.html
@@ -391,6 +391,24 @@
         <!-- QP Ends Here -->
     </section>
 
+    <!-- Feedback -->
+    <section>
+
+        <div class="container">
+            <hr>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class=" feedbackLabel">Feedback Here :)</label>
+                <input type="email" id="emailForFeedback"
+                    placeholder="It would be great, if you share your Email Address">
+                <textarea class="feedbackTexarea" id="Feedback"
+                    placeholder="Please share your feedback and any suggestions you may have. Additionally, let us know what types of documents you need, and we'll do our best to provide them."
+                    rows="3"></textarea>
+                <button class="feedbackBTN" onclick="sendFeedback()">Send Feedback</button>
+            </div>
+        </div>
+
+    </section>
+
 
 </body>
 
